[package]
name = "ws"
version = "0.1.0"
authors = ["Connor Brewster <cbrewster@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
base64 = "0.13.0"
anyhow = "1.0.34"
sha-1 = "0.9"
bitflags = "1.2.1"
byteorder = "1.3.4"
thiserror = "1.0.22"
